# TodayWaifu

./: .gitignore  README.md  __init__.py  config_default.py  daily_wife_config.py  help.json  pyproject.toml  requirements.txt  role_id_map.txt
pixivpy/pixivpy3/: __init__.py
tests/: test_interactions_source.py
twf/: __init__.py  custom_role.py  daily.py  divorce.py  gift.py  help.py  loli.py  pixiv.py  rob.py  shared.py  update_log.py
